--- a/Frontend/CyDropFrontend/app/src/main/res/layout/activity_vet_navbar_main.xml
+++ b/Frontend/CyDropFrontend/app/src/main/res/layout/activity_vet_navbar_main.xml
@@ -5,16 +5,19 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ClientNavbarMainActivity">
+    tools:context=".VetNavbarMainActivity">
 
     <FrameLayout
         android:id="@+id/frame_layout"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:visibility="visible"
         app:layout_constraintBottom_toTopOf="@+id/bottomNavigationView"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="1.0">
 
     </FrameLayout>
 
@@ -25,6 +28,6 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:menu="@menu/client_bottom_nav_menu"
+        app:menu="@menu/vet_bottom_nav_menu"
         />
 </androidx.constraintlayout.widget.ConstraintLayout>
