--- a/Frontend/CyDropFrontend/app/src/main/res/menu/client_bottom_nav_menu.xml
+++ b/Frontend/CyDropFrontend/app/src/main/res/menu/client_bottom_nav_menu.xml
@@ -10,7 +10,7 @@
     <item
         android:icon="@drawable/baseline_pets_24"
         android:title="Pets"
-        android:id="@+id/home"
+        android:id="@+id/customers"
         />
 
     <item
