--- a/Experiments/madison/tutorials-unit3_1_one_websocket/WebSocketAndorid/app/src/main/res/layout/activity_chat.xml
+++ b/Experiments/madison/tutorials-unit3_1_one_websocket/WebSocketAndorid/app/src/main/res/layout/activity_chat.xml
@@ -1,44 +1,56 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.appcompat.widget.LinearLayoutCompat
-xmlns:tools="http://schemas.android.com/tools"
-xmlns:android="http://schemas.android.com/apk/res/android"
-tools:context=".ChatActivity"
-android:layout_height="match_parent"
-android:layout_width="match_parent"
-android:orientation="vertical">
-
-<LinearLayout
+<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:orientation="horizontal">
+    android:layout_height="match_parent"
+    android:background="@color/white"
+    android:orientation="vertical"
+    android:padding="16dp"
+    tools:context=".ChatActivity">
 
-    <EditText
-        android:layout_height="50dp"
-        android:layout_width="320dp"
-        android:hint="message"
-        android:textSize="20dp"
-        android:id="@+id/msgEdt" />
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Send"
-        android:id="@+id/sendBtn" />
-</LinearLayout>
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:padding="16dp">
 
+        <TextView
+            android:id="@+id/tx1"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="The conversation will appear here:"
+            android:padding="10dp"
+            android:textColor="@color/black"
+            android:textSize="18sp" />
+    </ScrollView>
 
-
-<ScrollView
-    android:layout_width="match_parent"
-    android:layout_height="650dp">
-
-    <TextView
-        android:id="@+id/tx1"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:hint="The Conversation will appear here:\n"
-        android:textSize="20dp" />
-</ScrollView>
+        android:layout_marginTop="8dp"
+        android:gravity="center_vertical"
+        android:orientation="horizontal">
 
+        <EditText
+            android:id="@+id/msgEdt"
+            android:layout_width="0dp"
+            android:layout_height="50dp"
+            android:layout_weight="1"
+            android:hint="Type a message"
+            android:padding="12dp"
+            android:textColor="#9C27B0"
+            android:textSize="16sp" />
+
+        <Button
+            android:id="@+id/sendBtn"
+            android:layout_width="wrap_content"
+            android:layout_height="50dp"
+            android:layout_marginStart="8dp"
+            android:backgroundTint="#4CAF50"
+            android:padding="12dp"
+            android:text="Send"
+            android:textColor="#2183F3"
+            android:textSize="16sp" />
+    </LinearLayout>
 
 </androidx.appcompat.widget.LinearLayoutCompat>
