--- a/Experiments/madison/tutorials-unit3_1_websockets/WebSocketAndorid-service-approach/app/src/main/res/layout/activity_chat1.xml
+++ b/Experiments/madison/tutorials-unit3_1_websockets/WebSocketAndorid-service-approach/app/src/main/res/layout/activity_chat1.xml
@@ -1,51 +1,67 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.appcompat.widget.LinearLayoutCompat
-xmlns:tools="http://schemas.android.com/tools"
-xmlns:android="http://schemas.android.com/apk/res/android"
-tools:context=".ChatActivity1"
-android:layout_height="match_parent"
-android:layout_width="match_parent"
-android:orientation="vertical">
-
-<LinearLayout
+    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    tools:context=".ChatActivity1"
+    android:layout_height="match_parent"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:orientation="horizontal">
+    android:orientation="vertical"
+    android:padding="16dp">
 
-    <EditText
-        android:layout_height="50dp"
-        android:layout_width="320dp"
-        android:hint="message"
-        android:textSize="20dp"
-        android:id="@+id/msgEdt" />
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Send"
-        android:id="@+id/sendBtn" />
-</LinearLayout>
+    <!-- Scrollable conversation area -->
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:padding="16dp"
+        android:layout_marginBottom="12dp">
 
+        <TextView
+            android:id="@+id/tx1"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="The conversation will appear here:\n"
+            android:textSize="18sp"
+            android:textColor="@color/black"
+            android:padding="10dp" />
+    </ScrollView>
 
-
-<ScrollView
-    android:layout_width="match_parent"
-    android:layout_height="600dp">
-
-    <TextView
-        android:id="@+id/tx1"
+    <!-- Message input and send button -->
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:hint="The Conversation will appear here:\n"
-        android:textSize="20dp" />
-</ScrollView>
+        android:orientation="horizontal"
+        android:gravity="center_vertical">
 
-<Button
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:layout_gravity="bottom"
-    android:text="Back to Main"
-    android:id="@+id/backMainBtn" />
+        <EditText
+            android:layout_height="50dp"
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:hint="Type a message"
+            android:textSize="16sp"
+            android:padding="12dp"
+            android:id="@+id/msgEdt" />
 
+        <Button
+            android:id="@+id/sendBtn"
+            android:layout_width="wrap_content"
+            android:layout_height="50dp"
+            android:layout_marginStart="8dp"
+            android:padding="12dp"
+            android:text="Send"
+            android:textColor="#FF9800"
+            android:textSize="16sp" />
+    </LinearLayout>
+
+    <!-- Back button -->
+    <Button
+        android:id="@+id/backMainBtn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="10dp"
+        android:text="Back to Main"
+        android:textColor="#FF9800"
+        android:textSize="16sp" />
 
 </androidx.appcompat.widget.LinearLayoutCompat>
