--- a/Experiments/madison/tutorials-unit3_2_image_handling/AndroidExample/app/src/main/res/layout/activity_image_req.xml
+++ b/Experiments/madison/tutorials-unit3_2_image_handling/AndroidExample/app/src/main/res/layout/activity_image_req.xml
@@ -5,22 +5,36 @@
     tools:context=".MainActivity"
     android:layout_height="match_parent"
     android:layout_width="match_parent"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:padding="16dp"
+    android:gravity="center_horizontal">
 
+    <!-- Image Request Button -->
     <Button
         android:id="@+id/btnImageReq"
-        android:layout_width="fill_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:text="Image Request" />
+        android:layout_marginTop="24dp"
+        android:backgroundTint="#F44336"
+        android:padding="12dp"
+        android:text="Request Image"
+        android:textColor="@color/white"
+        android:textSize="16sp" />
 
-    <ImageView
-        android:id="@+id/imgView"
-        android:layout_width="350dp"
-        android:layout_height="250dp"
-        android:layout_marginTop="150dp"
-        android:layout_gravity="center"
-        android:scaleType="fitCenter" >
-    </ImageView>
+    <!-- Framed Image View -->
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="30dp"
+        android:gravity="center"
+        android:padding="8dp">
+
+        <ImageView
+            android:id="@+id/imgView"
+            android:layout_width="300dp"
+            android:layout_height="200dp"
+            android:layout_gravity="center"
+            android:scaleType="centerCrop" />
+    </LinearLayout>
 
 </androidx.appcompat.widget.LinearLayoutCompat>
