--- a/Experiments/madison/tutorials-unit3_2_image_handling/AndroidExample/app/src/main/res/layout/activity_image_upload.xml
+++ b/Experiments/madison/tutorials-unit3_2_image_handling/AndroidExample/app/src/main/res/layout/activity_image_upload.xml
@@ -1,14 +1,16 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:gravity="center">
+    android:background="#FFEB3B"
+    android:gravity="center"
+    android:orientation="vertical">
 
     <Button
         android:id="@+id/selectBtn"
-        android:layout_marginTop="10dp"
         android:layout_width="180sp"
         android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:backgroundTint="#F44336"
         android:text="SELECT IMAGE" />
 
 
@@ -16,14 +18,15 @@
         android:id="@+id/imageSelView"
         android:layout_width="300sp"
         android:layout_height="300sp"
-        android:layout_marginTop="50dp"/>
+        android:layout_marginTop="50dp" />
 
     <Button
         android:id="@+id/uploadBtn"
-        android:layout_marginTop="150dp"
         android:layout_width="180sp"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
+        android:layout_marginTop="150dp"
+        android:backgroundTint="#F44336"
         android:text="UPLOAD" />
 
 </LinearLayout>
