--- a/Frontend/CyDropFrontend/app/src/main/res/layout/fragment_client_questions.xml
+++ b/Frontend/CyDropFrontend/app/src/main/res/layout/fragment_client_questions.xml
@@ -7,22 +7,20 @@
     android:background="@color/background_red"
     tools:context=".ClientQuestionsFragment" >
 
-    <FrameLayout
+    <ScrollView
         android:id="@+id/questions_frame_layout"
         android:layout_width="match_parent"
         android:layout_height="0dp"
+        android:orientation="vertical"
         app:layout_constraintBottom_toTopOf="@+id/constraintLayout2"
-        app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
-        tools:layout_editor_absoluteX="135dp">
+        app:layout_constraintTop_toBottomOf="@+id/constraintLayout">
 
-        <TextView
-            android:id="@+id/websockt_testview"
-            android:textSize="30sp"
-            android:textColor="@color/black"
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:id="@+id/global_questions_linear_layout"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="" />
-    </FrameLayout>
+            android:orientation="vertical" />
+    </ScrollView>
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/constraintLayout"
