--- a/Frontend/CyDropFrontend/app/src/main/res/values/colors.xml
+++ b/Frontend/CyDropFrontend/app/src/main/res/values/colors.xml
@@ -3,4 +3,5 @@
     <color name="background_red">#B31F25</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="grey">#717070</color>
 </resources>
