Message formatting added

--- a/Frontend/CyDropFrontend/app/src/main/res/menu/client_bottom_nav_menu.xml
+++ b/Frontend/CyDropFrontend/app/src/main/res/menu/client_bottom_nav_menu.xml
@@ -15,7 +15,7 @@
 
     <item
         android:icon="@drawable/baseline_question_answer_24"
-        android:title="Questions"
+        android:title="Chat"
         android:id="@+id/questions"
         />
 
