--- a/Frontend/CyDropFrontend/app/src/main/res/layout/fragment_client_questions.xml
+++ b/Frontend/CyDropFrontend/app/src/main/res/layout/fragment_client_questions.xml
@@ -32,20 +32,14 @@
             android:id="@+id/textView5"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Questions!"
+            android:text="Global chat"
+            android:textColor="@color/black"
             android:textSize="25sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
-        <Button
-            android:id="@+id/client_questions_global_chat_button"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Global chat"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
 
         <Button
             android:id="@+id/client_questions_direct_chat_button"
