--- a/Frontend/CyDropFrontend/app/src/main/res/layout/fragment_message.xml
+++ b/Frontend/CyDropFrontend/app/src/main/res/layout/fragment_message.xml
@@ -11,18 +11,22 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Sender: "
-        app:layout_constraintStart_toStartOf="parent"
+        android:layout_marginTop="7dp"
+        android:layout_marginStart="5dp"
         android:textColor="@color/black"
         android:textSize="23sp"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"/>
 
     <TextView
         android:id="@+id/message_sender_content"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:text="Message"
         android:textColor="@color/black"
         android:textSize="23sp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Message"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/message_sender_username"
         app:layout_constraintTop_toTopOf="parent" />
 
