--- a/Frontend/CyDropFrontend/app/src/main/res/layout/activity_login.xml
+++ b/Frontend/CyDropFrontend/app/src/main/res/layout/activity_login.xml
@@ -37,8 +37,7 @@
             android:id="@+id/login_username_edt"
             android:layout_width="wrap_content"
             android:layout_height="50dp"
-            android:hint="Enter Email Here"
-            android:text="sophia@gmail.com"></EditText>
+            android:hint="Email address"></EditText>
 
     </LinearLayout>
 
@@ -59,9 +58,8 @@
             android:id="@+id/login_password_edt"
             android:layout_width="wrap_content"
             android:layout_height="50dp"
-            android:hint="Enter Password Here"
-            android:inputType="textPassword"
-            android:text="sophia"></EditText>
+            android:hint="Password"
+            android:inputType="textPassword"></EditText>
 
     </LinearLayout>
 
