--- a/Frontend/CyDropFrontend/app/src/main/res/layout/fragment_client_home.xml
+++ b/Frontend/CyDropFrontend/app/src/main/res/layout/fragment_client_home.xml
@@ -4,7 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/background_red"
     tools:context=".ClientHomeFragment">
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -180,17 +179,20 @@
             android:id="@+id/addPetButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:backgroundTint="#4CAF50"
             android:layout_marginBottom="15dp"
             android:text="Add pet"
-            app:layout_constraintBottom_toTopOf="@+id/petListLinearLayout"
+            app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintEnd_toEndOf="parent" />
 
         <Button
             android:id="@+id/adminLogoutButton"
             android:layout_width="wrap_content"
+            android:backgroundTint="@color/grey"
             android:layout_height="wrap_content"
             android:text="Logout"
-            app:layout_constraintStart_toStartOf="parent" />
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <Button
             android:id="@+id/editPetById"
@@ -201,16 +203,8 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent" />
 
-        <Button
-            android:id="@+id/removePetByID"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Delete pet"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent" />
-
         <TextView
-            android:id="@+id/textView"
+            android:id="@+id/client_home_pets_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
@@ -221,25 +215,23 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
+        <ScrollView
+            android:id="@+id/client_home_scrollview"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/client_home_pets_text">
+
         <LinearLayout
             android:id="@+id/petListLinearLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
-            android:orientation="vertical"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/textView">
+            android:orientation="vertical">
 
-            <TextView
-                android:id="@+id/textView2"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="@color/white"
-                android:text="TextView"
-                android:textColor="@color/black"
-                android:textSize="20sp" />
         </LinearLayout>
+        </ScrollView>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
