--- a/Frontend/CyDropFrontend/app/src/main/res/layout/fragment_client_home.xml
+++ b/Frontend/CyDropFrontend/app/src/main/res/layout/fragment_client_home.xml
@@ -7,55 +7,6 @@
     tools:context=".ClientHomeFragment">
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/editPetOverlay"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:visibility="gone">
-
-    </androidx.constraintlayout.widget.ConstraintLayout>
-
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/deletePetOverlay"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:visibility="gone">
-
-        <Button
-            android:id="@+id/deletePetBackButton"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="16dp"
-            android:text="Back"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-
-        <EditText
-            android:id="@+id/petIdToDelete"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:ems="10"
-            android:hint="Pet ID to delete"
-            android:inputType="text"
-            app:layout_constraintBottom_toTopOf="@+id/deletePetSubmitButton"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent" />
-
-        <Button
-            android:id="@+id/deletePetSubmitButton"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="163dp"
-            android:layout_marginEnd="157dp"
-            android:text="Confirm Delete"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.566"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-    </androidx.constraintlayout.widget.ConstraintLayout>
-
-    <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/addPetOverlay"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -180,6 +131,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:backgroundTint="#4CAF50"
+            android:layout_marginEnd="10dp"
+            android:layout_marginTop="5dp"
             android:layout_marginBottom="15dp"
             android:text="Add pet"
             app:layout_constraintTop_toTopOf="parent"
@@ -189,6 +142,8 @@
             android:id="@+id/adminLogoutButton"
             android:layout_width="wrap_content"
             android:backgroundTint="@color/grey"
+            android:layout_marginTop="5dp"
+            android:layout_marginStart="10dp"
             android:layout_height="wrap_content"
             android:text="Logout"
             app:layout_constraintStart_toStartOf="parent"
@@ -208,6 +163,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
+            android:layout_marginTop="2dp"
             android:text="Pets view"
             android:textColor="@color/black"
             android:textSize="40dp"
@@ -218,19 +174,20 @@
         <ScrollView
             android:id="@+id/client_home_scrollview"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="0dp"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/client_home_pets_text">
 
-        <LinearLayout
-            android:id="@+id/petListLinearLayout"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:orientation="vertical">
+            <LinearLayout
+                android:id="@+id/petListLinearLayout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:orientation="vertical">
 
-        </LinearLayout>
+            </LinearLayout>
         </ScrollView>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
