--- a/Frontend/CyDropFrontend/app/src/main/res/layout/fragment_client_questions.xml
+++ b/Frontend/CyDropFrontend/app/src/main/res/layout/fragment_client_questions.xml
@@ -6,18 +6,22 @@
     android:layout_height="match_parent"
     tools:context=".ClientQuestionsFragment">
 
+
     <ScrollView
         android:id="@+id/questions_frame_layout"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
+        android:layout_height="600dp"
         android:orientation="vertical"
         app:layout_constraintBottom_toTopOf="@+id/constraintLayout2"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/constraintLayout">
 
         <LinearLayout
             android:id="@+id/global_questions_linear_layout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:animateLayoutChanges="true"
             android:orientation="vertical" />
     </ScrollView>
 
