--- a/Frontend/CyDropFrontend/app/src/main/res/values/colors.xml
+++ b/Frontend/CyDropFrontend/app/src/main/res/values/colors.xml
@@ -4,4 +4,5 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="grey">#717070</color>
+    <color name="alpha_grey">#C2838383</color>
 </resources>
