--- a/Frontend/CyDropFrontend/app/src/main/res/menu/vet_bottom_nav_menu.xml
+++ b/Frontend/CyDropFrontend/app/src/main/res/menu/vet_bottom_nav_menu.xml
@@ -1,15 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <item
-        android:icon="@drawable/baseline_calendar_month_24"
-        android:title="Reminders"
-        android:id="@+id/reminders"
-        />
+<!--    <item-->
+<!--        android:icon="@drawable/baseline_calendar_month_24"-->
+<!--        android:title="Reminders"-->
+<!--        android:id="@+id/reminders"-->
+<!--        />-->
 
     <item
         android:id="@+id/customers"
-        android:icon="@drawable/baseline_pets_24"
+        android:icon="@drawable/baseline_people_alt_24"
         android:title="Customers" />
 
     <item
