--- a/Frontend/CyDropFrontend/app/src/main/res/layout/fragment_client_home.xml
+++ b/Frontend/CyDropFrontend/app/src/main/res/layout/fragment_client_home.xml
@@ -127,7 +127,7 @@
         android:layout_height="match_parent">
 
         <Button
-            android:id="@+id/addPetButton"
+            android:id="@+id/meds_btn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:backgroundTint="#4CAF50"
@@ -139,7 +139,7 @@
             app:layout_constraintEnd_toEndOf="parent" />
 
         <Button
-            android:id="@+id/client_home_logout_button"
+            android:id="@+id/logout_button"
             android:layout_width="wrap_content"
             android:backgroundTint="@color/grey"
             android:layout_marginTop="5dp"
@@ -159,7 +159,7 @@
             app:layout_constraintEnd_toEndOf="parent" />
 
         <TextView
-            android:id="@+id/client_home_pets_text"
+            android:id="@+id/customer_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
@@ -167,7 +167,7 @@
             android:text="Pets view"
             android:textColor="@color/black"
             android:textSize="40dp"
-            app:layout_constraintEnd_toEndOf="@id/addPetButton"
+            app:layout_constraintEnd_toEndOf="@id/meds_btn"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
@@ -178,7 +178,7 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/client_home_pets_text">
+            app:layout_constraintTop_toBottomOf="@+id/customer_text">
 
             <LinearLayout
                 android:id="@+id/petListLinearLayout"
